--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Arimo:400,700|Roboto+Slab:400,700");
+@import url("https://fonts.googleapis.com/css?family=Arimo:400,700");
 
 :root {
   font-size: calc(0.5vw + 1vh);
