--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ footer {
 }
 
 .column {
-  margin: 0.6rem;
+  margin-top: 0.6rem;
   background: #a8a8a8;
   border: #000013 0.2rem solid;
   border-radius: 0.2rem;
