--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Arimo:400,700");
 
 :root {
-  font-size: calc(0.5vw + 1vh);
+  font-size: calc(0.5vw + 0.9vh);
 }
 
 * {
@@ -110,6 +110,7 @@ footer {
 
 .task-list {
   min-height: 3rem;
+  min-width: 15rem;
 }
 
 ul {
@@ -182,7 +183,7 @@ li {
   padding: 0.4rem;
 }
 
-#taskText {
+#guestText {
   background: #fff;
   border: #000013 0.15rem solid;
   border-radius: 0.2rem;
