--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ li {
 
 /* Our Grid Code */
 .app-layout {
+  overscroll-behavior: contain;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 50vh 50vh;
