--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ li {
   overscroll-behavior: contain;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 50vh 50vh;
+  grid-template-rows: 1fr 1fr;
 }
 
 .playing {
