--- a/layout.css
+++ b/layout.css
@@ -1,51 +1,266 @@
-*{
+@import url("https://fonts.googleapis.com/css?family=Arimo:400,700");
+
+:root {
+  font-size: calc(0.5vw + 0.9vh);
+}
+
+* {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 0;
+}
+
+body {
+  min-width: 420px;
+  overflow:hidden;
+}
+
+h1,
+h4 {
+  font-family: "Arimo", sans-serif;
+  line-height: 1.3;
+}
+
+header h1 {
+  font-size: 2.4rem;
+  margin: 4rem auto;
+}
+
+span {
+  font-size: 3rem;
+}
+
+p {
+  font-family: "Arimo", sans-serif;
+}
+
+a,
+a:link,
+a:active,
+a:visited {
+  color: #0066aa;
+  text-decoration: none;
+  border-bottom: #000013 0.16rem solid;
+}
+
+a:hover {
+  color: #000013;
+  border-bottom: #0066aa 0.16rem solid;
+}
+
+header,
+footer {
+  width: 40rem;
+  margin: 2rem auto;
+  text-align: center;
+}
+
+.add-player-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 5.3rem;
+  margin: auto;
+  background: #a8a8a8;
+  border: #000013 0.2rem solid;
+  border-radius: 0.2rem;
+  padding: 0.4rem;
+}
+
+
+.columns {
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  margin: 1.6rem auto;
+  min-height: 15rem;
+}
+
+.column {
+  margin-top: 0.6rem;
+  background: #a8a8a8;
+  border: #000013 0.2rem solid;
+  border-radius: 0.2rem;
+
+  display: flex;
+  flex-direction: row;
+}
+
+.column-header {
+  padding: 0.1rem;
+  border-right: #000013 0.2rem solid;
+}
+
+.column-header h4 {
+  text-align: center;
+}
+
+.playing-column .column-header {
+  background: #ff872f;
+}
+
+.scheduled-column .column-header {
+  background: #13a4d9;
+}
+
+.player-list {
+  min-height: 3rem;
+  min-width: 15rem;
+}
+
+.member-pool{
+  width: 100%;
+  min-height: 43vh;
+}
+
+ul {
+  list-style-type: none;
   margin: 0;
+  padding: 0;
 }
-.wrapper {
+
+li {
+  list-style-type: none;
+}
+
+.column-button {
+  text-align: center;
+  padding: 0.1rem;
+  margin-left: auto;
+  margin-right: 0.2rem;
+}
+
+.button {
+  font-family: "Arimo", sans-serif;
+  font-weight: 700;
+  border: #000013 0.14rem solid;
+  border-radius: 0.2rem;
+  color: #000013;
+  padding: 0.6rem 1rem;
+  margin-bottom: 0.3rem;
+  cursor: pointer;
+}
+
+.delete-button {
+  background-color: #ff4444;
+  margin-top: 0.8rem;
+}
+
+.delete-button:hover {
+  background-color: #fa7070;
+}
+
+.add-button {
+  background-color: #ffcb1e;
+  padding: 0 1rem;
+  height: 2.8rem;
+  margin-top: 0.6rem;
+}
+
+.add-button:hover {
+  background-color: #ffdd6e;
+}
+
+.player {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  vertical-align: middle;
+  list-style-type: none;
+  background: #fff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  margin: 0.2rem;
+  height: 4rem;
+  border: #000013 0.15rem solid;
+  border-radius: 0.2rem;
+  cursor: move;
+  text-align: center;
+  vertical-align: middle;
+
+  float: left;
+  padding: 0.4rem;
+}
+
+.player .name{
+  margin: auto;
+}
+
+.player .class{
+  float: left;
+  margin-bottom: auto;
+}
+
+.player .times{
+  float: right;
+  margin-bottom: auto;
+}
+#guestText {
+  background: #fff;
+  border: #000013 0.15rem solid;
+  border-radius: 0.2rem;
+  text-align: center;
+  font-family: "Arimo", sans-serif;
+  height: 4rem;
+  width: 7rem;
+  margin: auto 0.8rem auto 0.1rem;
+}
+
+/* Dragula CSS Release 3.2.0 from: https://github.com/bevacqua/dragula */
+
+.gu-mirror {
+  position: fixed !important;
+  margin: 0 !important;
+  z-index: 9999 !important;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+}
+
+.gu-hide {
+  display: none !important;
+}
+
+.gu-unselectable {
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+
+.gu-transit {
+  opacity: 0.2;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+  filter: alpha(opacity=20);
+}
+
+
+.box {
+  padding: 0.5em;
+  text-align: center;
+  background-color: #efefef;
+}
+
+.box-title {
+  font-weight:bold;
+}
+
+.playing   { background-color: #A2DED0; }
+.scheduled  { background-color: #F4D03F; }
+.members { background-color: #13a4d9; }
+.waitting { background-color: #ff872f; }
+
+/* Our Grid Code */
+.app-layout {
+  overscroll-behavior: contain;
   display: grid;
-  border-style: solid;
-  border-color: red;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 10px;
-  width: 100vw;
-  height: 100vh;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 50vh 50vh;
 }
-.one {
-  border-style: solid;
-  border-color: blue;
-  grid-column: 1 / 3;
-  grid-row: 1;
+
+.playing {
+      grid-row: span 2;
 }
-.two {
-  border-style: solid;
-  border-color: yellow;
-  grid-column: 2 / 4;
-  grid-row: 1 / 3;
-}
-.three {
-  border-style: solid;
-  border-color: violet;
-  grid-row: 2 / 5;
-  grid-column: 1;
-}
-.four {
-  border-style: solid;
-  border-color: aqua;
-  grid-column: 3;
-  grid-row: 3;
-}
-.five {
-  border-style: solid;
-  border-color: green;
-  grid-column: 2;
-  grid-row: 4;
-}
-.six {
-  border-style: solid;
-  border-color: purple;
-  grid-column: 3;
-  grid-row: 4;
+
+.members {
+      grid-row: span 2;
 }
